package com.example.jurassicpark.ciclodevida;

public interface CiclodeVida {
    void huevo();
    void nacer();
    void crecer();
    void reproducirse();
    void adulto();
    void morir();
}
