package com.example.jurassicpark.models;

public enum Sexo {
    MACHO, HEMBRA
}
